fix dashboard menu on mobile

--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -3,9 +3,15 @@
   list-style-type: none;
   margin: 24px 20px 0 0;
   padding: 0;
-  width: 210px;
 
   @media (min-width: 1200px){width: 250px;}
+
+  @media (max-width: 767px) {
+    position: relative;
+    width: 100%;
+    margin-bottom: 24px;
+  }
+
   & li {
     &.active a{
       background-color:transparent;
@@ -16,7 +22,6 @@
         color:#dcdee0;
       }
     }
-
     & a {
       color: #555555;
       margin: 0 0 10px;
@@ -29,6 +34,11 @@
       font-family: 'Oswald', sans-serif;
       text-shadow:2px 2px white;
 
+      @media (max-width: 767px) {
+        text-align: left;
+        border-bottom: 1px solid #e9e9e9;
+        border-right: 0;
+      }
     }
   }
 }
