--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -1,6 +1,6 @@
 body{
   padding-top:0;
-  @media (min-width: 980px){padding-top:79px;}
+  @media (min-width: 767px) {padding-top:79px;}
 }
 
 a{&:hover {text-decoration:none;}}
@@ -25,7 +25,6 @@ h1,h2,h3,h4,h5,h6,h7 {
     background: -ms-linear-gradient(top, #079ebd 0%,#026e97 100%); /* IE10+ */
     background: linear-gradient(to bottom, #079ebd 0%,#026e97 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#079ebd', endColorstr='#026e97',GradientType=0 ); /* IE6-9 */
-    //padding:10px 0;
     padding:0;
     border-radius:0;
     border:none;
@@ -77,12 +76,6 @@ h1,h2,h3,h4,h5,h6,h7 {
   margin: 50px auto 20px;
   left:0;
   top:auto;
-}
-
-.main-no-slider {
-  margin-top:75px;
-  @media(max-width: 979px) and (min-width: 768px) {margin-top:155px;}
-  @media(max-width: 767px){margin-top:25px;}
 }
 
 #n2ostatus{ word-break: break-word; }
